--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.2.34"
+    "typeorm": "^0.2.34",
+    "typeorm-model-generator": "^0.4.5"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
