--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjsx/crud-request": "^5.0.0-alpha.3",
     "@nestjsx/crud-typeorm": "^5.0.0-alpha.3",
     "class-transformer": "^0.4.0",
+    "file-type": "^16.5.3",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sharp": "^0.28.3",
     "typeorm": "^0.2.34",
     "typeorm-model-generator": "^0.4.5"
   },
